Fix logs being written to local application directory.